mango-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: task-manager
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
    name: mongodb
